--- a/html/patientRegistration.html
+++ b/html/patientRegistration.html
@@ -68,7 +68,8 @@
             <button
               class="w-full py-3 font-medium text-white bg-blue-600 hover:bg-blue-500 rounded-lg border-blue-500 hover:shadow inline-flex space-x-2 items-center justify-center"
               type="button"
-              onclick="nextStep()"
+              id="nextButton"
+          
             >
               Next
             </button>
@@ -141,7 +142,8 @@
             <button
               class="w-full py-3 font-medium text-white bg-blue-600 hover:bg-blue-500 rounded-lg border-blue-500 hover:shadow inline-flex space-x-2 items-center justify-center"
               type="button"
-              onclick="nextStep()"
+              id="nextButton"
+              
             >
               Next
             </button>
@@ -249,6 +251,6 @@
       </div>
     </div>
 
-    <script src="../js/patientRegistration.js"></script>
+    <script type="module" src="../js/patientRegistration.js"></script>
   </body>
 </html>
